force-app/main/default/objects/Case/fields/Order_Is_Coupon_Used__c.field-meta.xml
<CustomField>
    <fullName>Order_Is_Coupon_Used__c</fullName>
    <formula>TEXT(OrderId__r.Coupon__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order Is Coupon Used</label>
    <type>Text</type>
</CustomField>