force-app/main/default/objects/Case/fields/Order_Paid_Amount__c.field-meta.xml
<CustomField>
    <fullName>Order_Paid_Amount__c</fullName>
    <formula>OrderId__r.Paid_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order Paid Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>