force-app/main/default/objects/Case/fields/Order_Payment_Id__c.field-meta.xml
<CustomField>
    <fullName>Order_Payment_Id__c</fullName>
    <formula>OrderId__r.Payment_Id__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order Payment Id</label>
    <type>Text</type>
</CustomField>