force-app/main/default/objects/Case/fields/Order_Shipping_Address__c.field-meta.xml
<CustomField>
    <fullName>Order_Shipping_Address__c</fullName>
    <formula>OrderId__r.ShippingStreet + &apos;, &apos; + OrderId__r.ShippingCity + &apos;, &apos; +  OrderId__r.ShippingState + &apos;, &apos; +  OrderId__r.ShippingCountry + &apos;, &apos; +  OrderId__r.ShippingPostalCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order Shipping Address</label>
    <type>Text</type>
</CustomField>