force-app/main/default/objects/Case/fields/Order_Shipping_Mobile_No__c.field-meta.xml
<CustomField>
    <fullName>Order_Shipping_Mobile_No__c</fullName>
    <formula>OrderId__r.Delivery_Mobile_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order Shipping Mobile No</label>
    <type>Text</type>
</CustomField>