force-app/main/default/objects/Case/fields/Order_Shipping_Name__c.field-meta.xml
<CustomField>
    <fullName>Order_Shipping_Name__c</fullName>
    <formula>OrderId__r.Shipping_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order Shipping Name</label>
    <type>Text</type>
</CustomField>