force-app/main/default/objects/Case/fields/Order_SKU_details__c.field-meta.xml
<CustomField>
    <fullName>Order_SKU_details__c</fullName>
    <label>Order &amp; SKU details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>