force-app/main/default/objects/Case/fields/Order_Source__c.field-meta.xml
<CustomField>
    <fullName>Order_Source__c</fullName>
    <label>Order Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>WebSite</fullName>
            </value>
            <value>
                <fullName>App</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>