force-app/main/default/objects/Case/fields/OutBound_Dealy_In_Delivery__c.field-meta.xml
<CustomField>
    <fullName>OutBound_Dealy_In_Delivery__c</fullName>
    <defaultValue>false</defaultValue>
    <label>OutBound Dealy In Delivery</label>
    <type>Checkbox</type>
</CustomField>