force-app/main/default/objects/Case/fields/OutBound_PinCode_not_Serviceable__c.field-meta.xml
<CustomField>
    <fullName>OutBound_PinCode_not_Serviceable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>OutBound PinCode not Serviceable</label>
    <type>Checkbox</type>
</CustomField>