force-app/main/default/objects/Case/fields/Pin_code__c.field-meta.xml
<CustomField>
    <fullName>Pin_code__c</fullName>
    <label>Pin code</label>
    <type>Address</type>
</CustomField>