force-app/main/default/objects/Case/fields/Post_Attachment_Url__c.field-meta.xml
<CustomField>
    <fullName>Post_Attachment_Url__c</fullName>
    <label>Post Attachment Url</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>