force-app/main/default/objects/Case/fields/Post_Case_Comments__c.field-meta.xml
<CustomField>
    <fullName>Post_Case_Comments__c</fullName>
    <label>Post Case Comments</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>