force-app/main/default/objects/Case/fields/Post_Comments__c.field-meta.xml
<CustomField>
    <fullName>Post_Comments__c</fullName>
    <label>Post Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>