force-app/main/default/objects/Case/fields/POST_URL__c.field-meta.xml
<CustomField>
    <fullName>POST_URL__c</fullName>
    <label>POST URL</label>
    <type>Url</type>
</CustomField>