force-app/main/default/objects/Case/fields/Previous_order_number__c.field-meta.xml
<CustomField>
    <fullName>Previous_order_number__c</fullName>
    <label>Previous order number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>