force-app/main/default/objects/Case/fields/Price_Differnece__c.field-meta.xml
<CustomField>
    <fullName>Price_Differnece__c</fullName>
    <label>Price Differnece</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>