force-app/main/default/objects/Case/fields/Price_Shown__c.field-meta.xml
<CustomField>
    <fullName>Price_Shown__c</fullName>
    <label>Price Shown</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>