force-app/main/default/objects/Case/fields/Product2_Name__c.field-meta.xml
<CustomField>
    <fullName>Product2_Name__c</fullName>
    <formula>OrderId__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product2 Name</label>
    <type>Text</type>
</CustomField>