force-app/main/default/objects/Case/fields/Re_Opening_Reason__c.field-meta.xml
<CustomField>
    <fullName>Re_Opening_Reason__c</fullName>
    <label>Re-Opening-Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>