force-app/main/default/objects/Case/fields/Reason_For_Dealy__c.field-meta.xml
<CustomField>
    <fullName>Reason_For_Dealy__c</fullName>
    <label>Reason For Dealy</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Lost in Transit</fullName>
            </value>
            <value>
                <fullName>Incorrect Addresses</fullName>
            </value>
            <value>
                <fullName>Customer Unreachable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>