force-app/main/default/objects/Case/fields/Reason_For_Duplicate_Order__c.field-meta.xml
<CustomField>
    <fullName>Reason_For_Duplicate_Order__c</fullName>
    <label>Reason For Duplicate Order</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>