force-app/main/default/objects/Case/fields/Reason_for_RTO__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_RTO__c</fullName>
    <label>Reason for:RTO</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Code verified cancellation</fullName>
            </value>
            <value>
                <fullName>WhatsApp verified cancellation</fullName>
            </value>
            <value>
                <fullName>Maximum attempts reached</fullName>
            </value>
            <value>
                <fullName>The consignee refused to accept</fullName>
            </value>
            <value>
                <fullName>Order canceled by customer</fullName>
            </value>
            <value>
                <fullName>Customs Clearance</fullName>
                <isActive>false</isActive>
                <label>Customs Clearance</label>
            </value>
            <value>
                <fullName>Delivery Attempt Failed</fullName>
                <isActive>false</isActive>
                <label>Delivery Attempt Failed</label>
            </value>
            <value>
                <fullName>Incorrect Address</fullName>
                <isActive>false</isActive>
                <label>Incorrect Address</label>
            </value>
            <value>
                <fullName>Order Cancellation</fullName>
                <isActive>false</isActive>
                <label>Order Cancellation</label>
            </value>
            <value>
                <fullName>Order Processing Issues</fullName>
                <isActive>false</isActive>
                <label>Order Processing Issues</label>
            </value>
            <value>
                <fullName>Shipping Delay</fullName>
                <isActive>false</isActive>
                <label>Shipping Delay</label>
            </value>
            <value>
                <fullName>Stolen or Misdelivered</fullName>
                <isActive>false</isActive>
                <label>Stolen or Misdelivered</label>
            </value>
            <value>
                <fullName>Technical Glitches</fullName>
                <isActive>false</isActive>
                <label>Technical Glitches</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>