force-app/main/default/objects/Case/fields/Receiver_contact_number__c.field-meta.xml
<CustomField>
    <fullName>Receiver_contact_number__c</fullName>
    <label>Receiver contact number</label>
    <type>Phone</type>
</CustomField>