force-app/main/default/objects/Case/fields/Receiver_Mobile_Number__c.field-meta.xml
<CustomField>
    <fullName>Receiver_Mobile_Number__c</fullName>
    <label>Receiver Mobile Number</label>
    <type>Phone</type>
</CustomField>