force-app/main/default/objects/Case/fields/Receiver_Name__c.field-meta.xml
<CustomField>
    <fullName>Receiver_Name__c</fullName>
    <label>Receiver Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>