force-app/main/default/objects/Case/fields/Record_changed__c.field-meta.xml
<CustomField>
    <fullName>Record_changed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Record changed</label>
    <type>Checkbox</type>
</CustomField>