force-app/main/default/objects/Case/fields/Refer_Back_Reason__c.field-meta.xml
<CustomField>
    <fullName>Refer_Back_Reason__c</fullName>
    <label>Refer Back Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Resolved</fullName>
            </value>
            <value>
                <fullName>Need More Info</fullName>
            </value>
            <value>
                <fullName>Send Update</fullName>
            </value>
            <value>
                <fullName>Wrongly Sent</fullName>
            </value>
            <value>
                <fullName>Address Changed</fullName>
                <isActive>false</isActive>
                <label>Address Changed</label>
            </value>
            <value>
                <fullName>Cancellation Processed</fullName>
                <isActive>false</isActive>
                <label>Cancellation Processed</label>
            </value>
            <value>
                <fullName>Cancellation Rejected</fullName>
                <isActive>false</isActive>
                <label>Cancellation Rejected</label>
            </value>
            <value>
                <fullName>Refund Processed</fullName>
                <isActive>false</isActive>
                <label>Refund Processed</label>
            </value>
            <value>
                <fullName>Refund Rejected</fullName>
                <isActive>false</isActive>
                <label>Refund Rejected</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>