force-app/main/default/objects/Case/fields/Refund_Back_Reason__c.field-meta.xml
<CustomField>
    <fullName>Refund_Back_Reason__c</fullName>
    <label>Refund Back Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Request Approve</fullName>
            </value>
            <value>
                <fullName>Request Rejected</fullName>
            </value>
            <value>
                <fullName>Need More Information</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>