force-app/main/default/objects/Case/fields/Refund_Reasons__c.field-meta.xml
<CustomField>
    <fullName>Refund_Reasons__c</fullName>
    <label>Refund Reasons</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Product Defect</fullName>
            </value>
            <value>
                <fullName>Wrong Item Shipped</fullName>
            </value>
            <value>
                <fullName>Customer Changed Mind</fullName>
            </value>
            <value>
                <fullName>Late Delivery</fullName>
            </value>
            <value>
                <fullName>Item Not as Described</fullName>
            </value>
            <value>
                <fullName>Billing Error</fullName>
            </value>
            <value>
                <fullName>Cancelled Order</fullName>
            </value>
            <value>
                <fullName>Duplicate Order</fullName>
            </value>
            <value>
                <fullName>Unwanted Gift</fullName>
            </value>
            <value>
                <fullName>Other (Specify)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>