force-app/main/default/objects/Case/fields/Refund_WH_Team_Status__c.field-meta.xml
<CustomField>
    <fullName>Refund_WH_Team_Status__c</fullName>
    <label>Refund/WH Team Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>