force-app/main/default/objects/Case/fields/RefundTeamMember__c.field-meta.xml
<CustomField>
    <fullName>RefundTeamMember__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Refund Team Member</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>