force-app/main/default/objects/Case/fields/Rejection_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Rejection_Remarks__c</fullName>
    <label>Rejection Remarks</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>