force-app/main/default/objects/Case/fields/Remarks_mentioned__c.field-meta.xml
<CustomField>
    <fullName>Remarks_mentioned__c</fullName>
    <label>Remarks mentioned</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>