force-app/main/default/objects/Case/fields/Required_payment_option__c.field-meta.xml
<CustomField>
    <fullName>Required_payment_option__c</fullName>
    <label>Required payment option</label>
    <length>100</length>
    <type>Text</type>
</CustomField>