force-app/main/default/objects/Case/fields/Required_PIN_code__c.field-meta.xml
<CustomField>
    <fullName>Required_PIN_code__c</fullName>
    <label>Required PIN code</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>