force-app/main/default/objects/Case/fields/RTO_Reso__c.field-meta.xml
<CustomField>
    <fullName>RTO_Reso__c</fullName>
    <label>RTO Resolution</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Initiate Refund</fullName>
            </value>
            <value>
                <fullName>Create Duplicate Order</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>