force-app/main/default/objects/Case/fields/RVP_Date__c.field-meta.xml
<CustomField>
    <fullName>RVP_Date__c</fullName>
    <label>RVP Date</label>
    <type>Date</type>
</CustomField>