force-app/main/default/objects/Case/fields/Screen_Shot__c.field-meta.xml
<CustomField>
    <fullName>Screen_Shot__c</fullName>
    <label>Screen Shot</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>