force-app/main/default/objects/Case/fields/Screen_Shot_Of_The_Issue__c.field-meta.xml
<CustomField>
    <fullName>Screen_Shot_Of_The_Issue__c</fullName>
    <label>Screen Shot Of The Issue</label>
    <length>65536</length>
    <type>Html</type>
</CustomField>