force-app/main/default/objects/Case/fields/Shipping_Mobile_No__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Mobile_No__c</fullName>
    <label>Shipping Mobile No</label>
    <type>Phone</type>
</CustomField>