force-app/main/default/objects/Case/fields/showFlags__c.field-meta.xml
<CustomField>
    <fullName>showFlags__c</fullName>
    <formula>IF(ISPICKVAL(Priority, &quot;High&quot;),
    IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;Red Flag&quot;, 20, 20),
    IF(ISPICKVAL(Priority, &quot;Medium&quot;),
        IMAGE(&quot;/img/samples/flag_yellow.gif&quot;, &quot;Yellow Flag&quot;, 20, 20),
        IF(ISPICKVAL(Priority, &quot;Low&quot;),
            IMAGE(&quot;/img/samples/flag_green.gif&quot;, &quot;Green Flag&quot;, 20, 20),
            IMAGE(&quot;/img/samples/flag_default.gif&quot;, &quot;Default Flag&quot;, 20, 20)
        )
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>showFlags</label>
    <type>Text</type>
</CustomField>