force-app/main/default/objects/Case/fields/SKU_Details__c.field-meta.xml
<CustomField>
    <fullName>SKU_Details__c</fullName>
    <label>SKU Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>