force-app/main/default/objects/Case/fields/SLA_Status__c.field-meta.xml
<CustomField>
    <fullName>SLA_Status__c</fullName>
    <formula>IF(
    Is_Closure_SLA_Breached__c,
    &quot;🔴&quot;,
    &quot;🟢&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SLA Status</label>
    <type>Text</type>
</CustomField>