force-app/main/default/objects/Case/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Unassigned</fullName>
            </value>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Re-Open</fullName>
            </value>
            <value>
                <fullName>Reassigned</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>