force-app/main/default/objects/Case/fields/Sub_Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Sub_Sub_Type__c</fullName>
    <label>Sub Sub Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Sub_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Login issues/Login number error</fullName>
            </value>
            <value>
                <fullName>Invalid Email/Phone Number</fullName>
            </value>
            <value>
                <fullName>Invalid Coupon Code</fullName>
            </value>
            <value>
                <fullName>App Stuck or Hanged</fullName>
            </value>
            <value>
                <fullName>Error while adding in cart</fullName>
            </value>
            <value>
                <fullName>Product Description/Offer Issues</fullName>
            </value>
            <value>
                <fullName>Addition of More Payment options or COD</fullName>
            </value>
            <value>
                <fullName>Refund Issues</fullName>
            </value>
            <value>
                <fullName>Change in profile number</fullName>
            </value>
            <value>
                <fullName>Updation of new email id</fullName>
            </value>
            <value>
                <fullName>Change in mail id</fullName>
            </value>
            <value>
                <fullName>Process to add/update more addresses</fullName>
            </value>
            <value>
                <fullName>Guided on App</fullName>
            </value>
            <value>
                <fullName>Price mismatch</fullName>
            </value>
            <value>
                <fullName>Comparison with Competitor</fullName>
            </value>
            <value>
                <fullName>Ongoing Campaign/Sales updates</fullName>
            </value>
            <value>
                <fullName>Upcoming Campaign /Sales updates</fullName>
            </value>
            <value>
                <fullName>How to check product review</fullName>
            </value>
            <value>
                <fullName>Giveaway inquiry</fullName>
            </value>
            <value>
                <fullName>Use of Coupon codes</fullName>
            </value>
            <value>
                <fullName>Coupon/Freebie /Discount/Cashback Issuance</fullName>
            </value>
            <value>
                <fullName>Gift an Order</fullName>
            </value>
            <value>
                <fullName>Information Given</fullName>
            </value>
            <value>
                <fullName>Guided to explore personalization on app</fullName>
            </value>
            <value>
                <fullName>Collabration Request/Influencer queries</fullName>
            </value>
            <value>
                <fullName>Collabration service issues</fullName>
            </value>
            <value>
                <fullName>Collabration Request</fullName>
            </value>
            <value>
                <fullName>Content Issues - Cx</fullName>
            </value>
            <value>
                <fullName>Content Issues - Partners</fullName>
            </value>
            <value>
                <fullName>Order number confirmation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>