force-app/main/default/objects/Case/fields/Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Sub_Type__c</fullName>
    <label>Sub Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Order Related</fullName>
            </value>
            <value>
                <fullName>App Related</fullName>
            </value>
            <value>
                <fullName>Refund Issues</fullName>
            </value>
            <value>
                <fullName>Mobile number change</fullName>
            </value>
            <value>
                <fullName>Update Email id</fullName>
            </value>
            <value>
                <fullName>Process to add or update more addresses</fullName>
            </value>
            <value>
                <fullName>Product Price</fullName>
            </value>
            <value>
                <fullName>Comparison with Competitor</fullName>
            </value>
            <value>
                <fullName>Offers and Promotions</fullName>
            </value>
            <value>
                <fullName>Gift / Pre-book</fullName>
            </value>
            <value>
                <fullName>Process to Purchase / Delivery Charges</fullName>
            </value>
            <value>
                <fullName>Expected Delivery TAT / Preferred Delivery window</fullName>
            </value>
            <value>
                <fullName>Previous order OOS Req for benefit/code</fullName>
            </value>
            <value>
                <fullName>Missed campaign Req. for Benefit/code</fullName>
            </value>
            <value>
                <fullName>Word of Mouth on Order Cancellation</fullName>
            </value>
            <value>
                <fullName>Know more about products</fullName>
            </value>
            <value>
                <fullName>Product Suitability</fullName>
            </value>
            <value>
                <fullName>Product Quantity or Ingredients or Description</fullName>
            </value>
            <value>
                <fullName>Stock / Restock</fullName>
            </value>
            <value>
                <fullName>Product life /Expiry/Authencity /Others</fullName>
            </value>
            <value>
                <fullName>Collaboration Request/Influencer queries</fullName>
            </value>
            <value>
                <fullName>Collaboration service issues</fullName>
            </value>
            <value>
                <fullName>Collaboration Request</fullName>
            </value>
            <value>
                <fullName>Content Issues - Cx</fullName>
            </value>
            <value>
                <fullName>Content Issues - Partners</fullName>
            </value>
            <value>
                <fullName>Order Status</fullName>
            </value>
            <value>
                <fullName>Gift Before Shipping</fullName>
            </value>
            <value>
                <fullName>Gift After Shipping</fullName>
            </value>
            <value>
                <fullName>Cancellation Before Shipping</fullName>
            </value>
            <value>
                <fullName>Cancellation After Shipping</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>