force-app/main/default/objects/Case/fields/Type_of_Call__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Call__c</fullName>
    <label>Type of Call</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>Service</fullName>
            </value>
            <value>
                <fullName>Feedback</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>