force-app/main/default/objects/Case/fields/Type_Of_Case__c.field-meta.xml
<CustomField>
    <fullName>Type_Of_Case__c</fullName>
    <label>Type Of Case</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Return to Origin (RTO)</fullName>
            </value>
            <value>
                <fullName>Out Of Stock (OOS)</fullName>
            </value>
            <value>
                <fullName>Courier Issue</fullName>
            </value>
            <value>
                <fullName>Delay In Delivery (DID)</fullName>
            </value>
            <value>
                <fullName>Pincode Not Serviceable</fullName>
            </value>
            <value>
                <fullName>Lost In Transit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>