force-app/main/default/objects/Case/fields/Type_of_Post__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Post__c</fullName>
    <label>Type of Post</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tags</fullName>
            </value>
            <value>
                <fullName>Mentions</fullName>
            </value>
            <value>
                <fullName>Hashtags</fullName>
            </value>
            <value>
                <fullName>Post</fullName>
            </value>
            <value>
                <fullName>DM</fullName>
            </value>
            <value>
                <fullName>Reel</fullName>
            </value>
            <value>
                <fullName>Comment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>