force-app/main/default/objects/Case/fields/User_is_Owner__c.field-meta.xml
<CustomField>
    <fullName>User_is_Owner__c</fullName>
    <formula>OwnerId =  $User.Id ||  $Profile.Name = &apos;System Administrator&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>User is Owner</label>
    <type>Checkbox</type>
</CustomField>