force-app/main/default/objects/Case/fields/UTR_Number__c.field-meta.xml
<CustomField>
    <fullName>UTR_Number__c</fullName>
    <label>UTR Number</label>
    <length>12</length>
    <type>Text</type>
</CustomField>