force-app/main/default/objects/Case/fields/UTRNo__c.field-meta.xml
<CustomField>
    <fullName>UTRNo__c</fullName>
    <formula>OrderId__r.UTR_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>UTRNo</label>
    <type>Text</type>
</CustomField>